# budget_app

./: .gitignore  Makefile  README  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/budget_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/budget_app/app/: helper_functions.py  main.py
src/budget_app/db/: db.py
src/budget_app/sql/: schema.sql
src/budget_app/utils/: __init__.py  billing.py  paths.py
tests/: conftest.py  test_billing.py  test_fixed_expenses.py  test_savings.py  test_subcategories.py
