[project]
name = "budget-app"
version = "0.1.0"
description = "Local personal budget application"
requires-python = ">=3.11"

dependencies = [
    "bcrypt",
    "streamlit",
]

[dependency-groups]
dev = [
    "ruff",
    "sqlfluff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
fix = true

[tool.ruff.format]
quote-style = "double"

[tool.sqlfluff.core]
dialect = "sqlite"
exclude_rules = ["L009"]

[tool.sqlfluff.rules]
max_line_length = 100
